crates/cella-codegen/src/ir/snapshots/cella_codegen__ir__lower__tests__array_without_items.snap
---
source: crates/cella-codegen/src/ir/lower.rs
expression: result
---
[
    Struct(
        IrStruct {
            name: "Config",
            doc: None,
            fields: [
                IrField {
                    name: "data",
                    json_name: "data",
                    doc: None,
                    ty: Vec(
                        Value,
                    ),
                    required: false,
                    deprecated: false,
                },
            ],
            deny_unknown_fields: false,
            is_all_of: false,
        },
    ),
]
